--- a/package.json
+++ b/package.json
@@ -9,25 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^10.0.2",
-    "@react-three/fiber": "^9.0.0-alpha.8",
-    "@tabler/icons-react": "^3.30.0",
-    "clsx": "^2.1.1",
-    "dotted-map": "^2.2.3",
-    "motion": "^12.0.0-alpha.2",
-    "next": "15.1.7",
+    "framer-motion": "^12.4.10",
+    "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "three": "^0.173.0",
-    "three-globe": "^2.41.12"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
